fix: visibility issues with spinner and button

--- a/stories/Button.scss
+++ b/stories/Button.scss
@@ -64,6 +64,12 @@ a.button {
   }
 
   > .content {
-    @include loading();
+    @include transition(opacity);
+
+    opacity: 1;
+  }
+
+  &.loading > .content {
+    opacity: 0;
   }
 }
